<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint = "Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/number"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:hint="Number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/job"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:hint="Business Type"
        android:entries="@array/Type_Business"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <EditText
        android:id="@+id/province"
        android:layout_width="310dp"
        android:hint="Province"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:entries="@array/Province"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="152dp"
        android:onClick="updateBusiness"
        android:text="Update Data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="152dp"
        android:onClick="eraseBusiness"
        android:text="Erase Business"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province"/>



</android.support.constraint.ConstraintLayout>